meer code voorbeelden voor de verschillende JEP's in het artikel